Fix args for restarting launcher
Fixes
- Jar name arg for restarting launcher from updater should be correct